2011-08-19  Torvald Riegel  <triegel@redhat.com>

	* config/linux/rwlock.h: New file.
	* config/linux/rwlock.c: New file.
	* configure.ac: Reenable futex support (undo SVN rev 157758).
	* Makefile.am: Same.
	* configure.tgt: Same.
	* config/linux/alpha/futex_bits.h: Same.
	* config/linux/futex.h: Same. Return number of woken processes.
	* config/linux/futex.cc: Same.
	(futex_wait): Remove spinning.
	* config/linux/x86/futex_bits.h: Same. Set futex timeout to zero.
	Use __x86_64__ instead of __LP64__.
	* aclocal.m4: Include generic futex checks.
	* configure: Rebuild.
	* Makefile.in: Rebuild.
	* testsuite/Makefile.in: Rebuild.
	* beginend.cc: Include pthread.h.
	* config/posix/cachepage.cc: Same.

2011-08-12  Torvald Riegel  <triegel@redhat.com>

	* config/x86/tls.h (gtm_tx, set_gtm_tx, setup_gtm_thr): Removed.
	(abi_disp, set_abi_disp): Move to tx's TLS slot.
	(set_gtm_thr): New.
	* config/generic/tls.h (gtm_tx, set_gtm_tx, setup_gtm_thr): Removed.
	(set_gtm_thr): New.
	(GTM::gtm_thread::thread_num): Removed.
	(GTM::gtm_thread): Renamed to GTM::gtm_thread_tls.
	* libitm_i.h (GTM::gtm_transaction): Renamed to GTM::gtm_thread. More
	tx-to-thread renaming.
	* beginend.cc: Adapted to tx-to-thread renaming.
	(GTM::gtm_thread::~gtm_thread): Extracted from thread_exit_handler().
	(GTM::gtm_thread::gtm_thread): Extracted from begin_transaction().
	* query.cc (_ITM_getTransactionId, _ITM_inTransaction): Renamed
	gtm_transaction to gtm_thread.
	(_ITM_getThreadnum): Removed. Not supported anymore.
	* testsuite/libitm.c/notx.c (main): Removed _ITM_getThreadnum call.
	* libitm.texi: Documented that _ITM_getThreadnum is not supported.
	* useraction.cc: Renamed gtm_transaction to gtm_thread. Adapted to
	gtm_tx-to-gtm_thr renaming if necessary.
	* eh_cpp.cc: Same.
	* local.cc: Same.
	* retry.cc: Same.
	* clone.cc: Same.
	* alloc.cc: Same.
	* alloc_c.cc: Same.
	* alloc_cpp.cc: Same.
	* method-serial.cc: Same.
	* config/generic/tls.cc: Same.